feat(filter): Add generic filter for model metadata values